--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "version": "0.1.0",
-  "license": "MIT",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
-  "files": [
-    "dist",
-    "src"
-  ],
-  "engines": {
-    "node": ">=10"
+  "name": "@molitio-ui/core",
+  "version": "1.0.0",
+  "author": "molitio foundation",
+  "description": "Universal reusable React UI Components",
+  "license": "CC0-1.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/molitio/molitio-ui-core.git"
   },
+  "keywords": [
+    "molitio",
+    "ui"
+  ],
+  "bugs": {
+    "url": "https://github.com/molitio/molitio-ui-core/issues"
+  },
+  "homepage": "https://github.com/molitio/molitio-ui-core#readme",
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build",
@@ -21,8 +27,18 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
+  "engines": {
+    "node": ">=12"
+  },
   "peerDependencies": {
-    "react": ">=16"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "husky": {
     "hooks": {
@@ -35,8 +51,6 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "molitio-ui-core",
-  "author": "peterkollerlv",
   "module": "dist/molitio-ui-core.esm.js",
   "size-limit": [
     {
@@ -49,9 +63,9 @@
     }
   ],
   "devDependencies": {
-    "@babel/core": "^7.14.3",
+    "@material-ui/core": "^4.11.3",
     "@size-limit/preset-small-lib": "^4.11.0",
-    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-info": "^5.3.21",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/addons": "^6.2.9",
@@ -60,12 +74,24 @@
     "@types/react-dom": "^17.0.5",
     "babel-loader": "^8.2.2",
     "husky": "^6.0.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "size-limit": "^4.11.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.2.0",
-    "typescript": "^3.9.9"
+    "typescript": "^4.1.5",
+    "@babel/core": "^7.14.3",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/preset-create-react-app": "^3.1.7",
+    "@types/jasmine": "^3.6.3",
+    "@types/node": "12.12.2",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
+    "eslint": "^7.20.0",
+    "eslint-config-google": "^0.14.0",
+    "jasmine": "^3.6.4",
+    "ts-node": "^9.0.0",
+    "ts-node-dev": "1.0.0-pre.63"
   }
 }
