--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@molitio-ui/core",
+  "name": "@molitio/ui-core",
   "version": "0.2.1",
   "author": "molitio foundation",
   "description": "Universal reusable React UI Components",
