--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,11 @@
 {
   // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
-  "include": ["src"],
+  "include": ["./"],
   "exclude": ["node_modules", "dist"],
-  "declarationDir": "./dist",
+  "declarationDir": "dist",
   "compilerOptions": {
     "module": "esnext",
     "lib": ["dom", "esnext"],
-    "baseUrl": "./",
-    "paths": {
-      "ui-paged-menu": ["src/packages/ui-paged-menu/src/*"]
-    },
     "importHelpers": true,
     "downlevelIteration": false,
     // output .d.ts declaration files for consumers
@@ -17,7 +13,7 @@
     // output .js.map sourcemap files for consumers
     "sourceMap": true,
     // match output dir to input dir. e.g. dist/index instead of dist/src/index
-    "rootDir": "./src",
+    "baseUrl": "./src",
     // stricter type-checking for stronger correctness. Recommended by TS
     "strict": true,
     // linter checks for common issues
