--- a/package.json
+++ b/package.json
@@ -1,10 +1,49 @@
 {
+  "name": "@molitio/molitio-ui-core",
+  "version": "0.2.2",
+  "author": "molitio foundation",
+  "description": "Universal reusable React UI Components",
+  "license": "CC0-1.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/molitio/molitio-ui-core.git"
+  },
+  "keywords": [
+    "molitio"
+  ],
+  "bugs": {
+    "url": "https://github.com/molitio/molitio-ui-core/issues"
+  },
+  "homepage": "https://github.com/molitio/molitio-ui-core#readme",
+  "main": "lib/index.js",
+  "typings": "lib/types/index.d.ts",
+  "engines": {
+    "node": ">=12"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsdx lint  --entry src/index.ts"
+    }
+  },
+  "files": [
+    "lib",
+    "*.d.ts",
+    "package.json, README.md, LICENSE"
+  ],
   "workspaces": [
     "src"
   ],
-  "scripts": {},
-  "engines": {
-    "node": ">=12"
+  "module": "dist/molitio-ui-core.esm.js",
+  "scripts": {
+    "start": "tsdx watch --entry src/index.ts",
+    "build": "tsdx build --entry src/index.ts --format cjs,esm,umd",
+    "test": "tsdx test --passWithNoTests",
+    "lint": "tsdx lint",
+    "prepare": "tsdx build  --entry src/index.ts",
+    "size": "size-limit",
+    "analyze": "size-limit --why",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "peerDependencies": {
     "react": "^16.14.0",
