--- a/package.json
+++ b/package.json
@@ -1,84 +1,88 @@
 {
-  "name": "@molitio/molitio-ui-core",
-  "version": "0.2.2",
-  "author": "molitio foundation",
-  "description": "Universal reusable React UI Components",
-  "license": "CC0-1.0",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/molitio/molitio-ui-core.git"
-  },
-  "keywords": [
-    "molitio"
-  ],
-  "bugs": {
-    "url": "https://github.com/molitio/molitio-ui-core/issues"
-  },
-  "homepage": "https://github.com/molitio/molitio-ui-core#readme",
-  "main": "lib/index.js",
-  "typings": "lib/types/index.d.ts",
-  "engines": {
-    "node": ">=12"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint  --entry src/index.ts"
+    "name": "@molitio/molitio-ui-core",
+    "version": "1.0.0",
+    "author": "molitio foundation",
+    "description": "Universal reusable React UI Components",
+    "license": "CC0-1.0",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/molitio/molitio-ui-core.git"
+    },
+    "keywords": [
+        "molitio"
+    ],
+    "bugs": {
+        "url": "https://github.com/molitio/molitio-ui-core/issues"
+    },
+    "homepage": "https://github.com/molitio/molitio-ui-core#readme",
+    "main": "lib/cjs/index.js",
+    "module": "lib/esm/index.js",
+    "typings": "lib/types/index.d.ts",
+    "engines": {
+        "node": ">=12"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
+        }
+    },
+    "size-limit": [
+        {
+            "path": "dist/molitio-ui-core.cjs.production.min.js",
+            "limit": "10 KB"
+        },
+        {
+            "path": "dist/molitio-ui-core.esm.js",
+            "limit": "10 KB"
+        }
+    ],
+    "scripts": {
+        "xpile": "babel --presets @babel/preset-typescript --extensions '.ts,.tsx' ./src -d lib",
+        "build:esm": "cross-env BABEL_ENV=esmUnbundled babel src --extensions '.ts,.tsx' --out-dir 'lib/esm' --source-maps",
+        "build:cjs": "cross-env BABEL_ENV=cjs babel src --extensions '.ts' --out-dir 'lib/cjs' --source-maps",
+        "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+        "size": "size-limit",
+        "analyze": "size-limit --why",
+        "storybook": "start-storybook -p 6006",
+        "build-storybook": "build-storybook"
+    },
+    "peerDependencies": {
+        "react": "^17.0.0",
+        "react-dom": "^17.0.0"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.14.5",
+        "@babel/core": "^7.14.6",
+        "@babel/plugin-transform-typescript": "^7.14.6",
+        "@babel/preset-env": "^7.14.5",
+        "@babel/preset-typescript": "^7.14.5",
+        "@material-ui/core": "^4.11.4",
+        "@rollup/plugin-babel": "^5.3.0",
+        "@size-limit/preset-small-lib": "^4.5.5",
+        "@storybook/addon-actions": "^6.2.9",
+        "@storybook/addon-essentials": "^6.2.9",
+        "@storybook/addon-links": "^6.2.9",
+        "@storybook/react": "^6.2.9",
+        "@types/jasmine": "^3.7.7",
+        "@types/node": "^15.12.2",
+        "@types/react": "^17.0.11",
+        "@types/react-dom": "^17.0.7",
+        "@typescript-eslint/eslint-plugin": "^4.27.0",
+        "@typescript-eslint/parser": "^4.27.0",
+        "babel-cli": "^6.26.0",
+        "babel-loader": "^8.2.2",
+        "babel-preset-latest": "^6.24.1",
+        "cross-env": "^7.0.3",
+        "eslint": "^7.28.0",
+        "eslint-config-google": "^0.14.0",
+        "husky": "^6.0.0",
+        "jasmine": "^3.7.0",
+        "react": "^17.0.0",
+        "react-dom": "^17.0.0",
+        "size-limit": "^4.12.0",
+        "ts-node": "^10.0.0",
+        "ts-node-dev": "^1.1.6",
+        "tslib": "^2.3.0",
+        "typescript": "^4.3.3"
     }
-  },
-  "files": [
-    "lib",
-    "*.d.ts",
-    "package.json, README.md, LICENSE"
-  ],
-  "workspaces": [
-    "src"
-  ],
-  "module": "dist/molitio-ui-core.esm.js",
-  "scripts": {
-    "start": "tsdx watch --entry src/index.ts",
-    "build": "tsdx build --entry src/index.ts --format cjs,esm,umd",
-    "test": "tsdx test --passWithNoTests",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build  --entry src/index.ts",
-    "size": "size-limit",
-    "analyze": "size-limit --why",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
-  },
-  "peerDependencies": {
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
-  },
-  "devDependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@size-limit/preset-small-lib": "^4.11.0",
-    "@storybook/addon-essentials": "^6.1.21",
-    "@storybook/addon-info": "^5.3.21",
-    "@storybook/addon-links": "^6.2.9",
-    "@storybook/addons": "^6.2.9",
-    "@storybook/react": "^6.2.9",
-    "@types/react": "^17.0.8",
-    "@types/react-dom": "^17.0.5",
-    "babel-loader": "^8.2.2",
-    "husky": "^6.0.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-is": "^17.0.2",
-    "size-limit": "^4.11.0",
-    "tsdx": "^0.14.1",
-    "tslib": "^2.2.0",
-    "typescript": "^4.1.5",
-    "@babel/core": "^7.14.3",
-    "@storybook/addon-actions": "^6.2.9",
-    "@storybook/preset-create-react-app": "^3.1.7",
-    "@types/jasmine": "^3.6.3",
-    "@types/node": "12.12.2",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
-    "eslint": "^7.20.0",
-    "eslint-config-google": "^0.14.0",
-    "jasmine": "^3.6.4",
-    "ts-node": "^9.0.0",
-    "ts-node-dev": "1.0.0-pre.63"
-  }
 }
