--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         }
     ],
     "scripts": {
+        "rollup": "rollup --config",
         "xpile": "babel --presets @babel/preset-typescript --extensions '.ts,.tsx' ./src -d lib",
         "build:esm": "cross-env BABEL_ENV=esmUnbundled babel src --extensions '.ts,.tsx' --out-dir 'lib/esm' --source-maps",
         "build:cjs": "cross-env BABEL_ENV=cjs babel src --extensions '.ts' --out-dir 'lib/cjs' --source-maps",
@@ -57,7 +58,8 @@
         "@babel/preset-env": "^7.14.5",
         "@babel/preset-typescript": "^7.14.5",
         "@material-ui/core": "^4.11.4",
-        "@rollup/plugin-babel": "^5.3.0",
+        "@rollup/plugin-commonjs": "^19.0.0",
+        "@rollup/plugin-node-resolve": "^13.0.0",
         "@size-limit/preset-small-lib": "^4.5.5",
         "@storybook/addon-actions": "^6.2.9",
         "@storybook/addon-essentials": "^6.2.9",
@@ -79,10 +81,14 @@
         "jasmine": "^3.7.0",
         "react": "^17.0.0",
         "react-dom": "^17.0.0",
+        "rollup": "^2.52.1",
         "size-limit": "^4.12.0",
         "ts-node": "^10.0.0",
         "ts-node-dev": "^1.1.6",
         "tslib": "^2.3.0",
         "typescript": "^4.3.3"
+    },
+    "dependencies": {
+        "@rollup/plugin-babel": "^5.3.0"
     }
 }
