--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         }
     ],
     "scripts": {
-        "rollup": "rollup --config",
+        "rup": "rollup --config",
         "xpile": "babel --presets @babel/preset-typescript --extensions '.ts,.tsx' ./src -d lib",
         "build:esm": "cross-env BABEL_ENV=esmUnbundled babel src --extensions '.ts,.tsx' --out-dir 'lib/esm' --source-maps",
         "build:cjs": "cross-env BABEL_ENV=cjs babel src --extensions '.ts' --out-dir 'lib/cjs' --source-maps",
