--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
     "include": ["./src"],
     "exclude": ["node_modules", "lib"],
-    "declarationDir": "lib",
+    "declarationDir": "./lib/types",
     "compilerOptions": {
         "module": "esnext",
         "lib": ["dom", "esnext"],
@@ -27,7 +27,7 @@
         // use Node's module resolution algorithm, instead of the legacy TS one
         "moduleResolution": "node",
         // transpile JSX to React.createElement
-        "jsx": "react",
+        "jsx": "react-jsx",
         // interop between ESM and CJS modules. Recommended by TS
         "esModuleInterop": true,
         // significant perf increase by skipping checking .d.ts files, particularly those in node_modules. Recommended by TS
