--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
         }
     ],
     "scripts": {
-        "rup": "rollup --config",
-        "xpile": "babel --presets @babel/preset-typescript --extensions '.ts,.tsx' ./src -d lib",
+        "rup": "rollup --config --watch",
+        "xpile":  "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps",
         "build:esm": "cross-env BABEL_ENV=esmUnbundled babel src --extensions '.ts,.tsx' --out-dir 'lib/esm' --source-maps",
         "build:cjs": "cross-env BABEL_ENV=cjs babel src --extensions '.ts' --out-dir 'lib/cjs' --source-maps",
         "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
