working storybook and rollup

--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -3,6 +3,7 @@
     "include": ["src"],
     "exclude": ["node_modules", "build"],
     "compilerOptions": {
+        "target": "es6",
         "module": "esnext",
         "lib": ["dom", "esnext"],
         "importHelpers": true,
