--- a/ui/package.json
+++ b/ui/package.json
@@ -69,48 +69,49 @@
         "build-storybook": "build-storybook"
     },
     "peerDependencies": {
-        "react": "^17.0.0",
-        "react-dom": "^17.0.0"
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
     },
     "devDependencies": {
-        "@babel/cli": "^7.14.5",
+        "@babel/cli": "^7.16.0",
         "@babel/core": "^7.16.0",
-        "@babel/plugin-transform-typescript": "^7.14.6",
-        "@babel/preset-env": "^7.14.5",
-        "@babel/preset-typescript": "^7.14.5",
-        "@material-ui/core": "^4.11.4",
+        "@babel/plugin-transform-typescript": "^7.16.1",
+        "@babel/preset-env": "^7.16.4",
+        "@babel/preset-typescript": "^7.16.0",
+        "@material-ui/core": "^4.12.3",
         "@rollup/plugin-babel": "^5.3.0",
-        "@rollup/plugin-commonjs": "^19.0.0",
+        "@rollup/plugin-commonjs": "^21.0.1",
         "@rollup/plugin-node-resolve": "^13.0.6",
         "@rollup/plugin-typescript": "^8.3.0",
-        "@size-limit/preset-small-lib": "^4.5.5",
-        "@storybook/addon-actions": "^6.2.9",
-        "@storybook/addon-essentials": "^6.2.9",
-        "@storybook/addon-links": "^6.2.9",
-        "@storybook/react": "^6.2.9",
-        "@types/jasmine": "^3.7.7",
-        "@types/node": "^15.12.2",
-        "@types/react": "^17.0.11",
-        "@types/react-dom": "^17.0.7",
-        "@typescript-eslint/eslint-plugin": "^4.27.0",
-        "@typescript-eslint/parser": "^4.27.0",
+        "@storybook/addon-actions": "^6.4.0",
+        "@storybook/addon-essentials": "^6.4.0",
+        "@storybook/addon-links": "^6.4.0",
+        "@storybook/react": "^6.4.0",
+        "@types/jasmine": "^3.10.2",
+        "@types/node": "^16.11.10",
+        "@types/react": "^17.0.37",
+        "@types/react-dom": "^17.0.11",
+        "@typescript-eslint/eslint-plugin": "^5.4.0",
+        "@typescript-eslint/parser": "^5.4.0",
         "babel-cli": "^6.26.0",
-        "babel-loader": "^8.2.2",
+        "babel-loader": "^8.2.3",
         "babel-preset-latest": "^6.24.1",
         "cross-env": "^7.0.3",
-        "eslint": "^7.28.0",
+        "eslint": "^8.3.0",
         "eslint-config-google": "^0.14.0",
-        "husky": "^6.0.0",
-        "jasmine": "^3.7.0",
-        "react": "^17.0.0",
-        "react-dom": "^17.0.0",
-        "rollup": "^2.52.1",
+        "husky": "^7.0.4",
+        "jasmine": "^3.10.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "rollup": "^2.60.1",
+        "rollup-plugin-buble": "^0.19.8",
         "rollup-plugin-peer-deps-external": "^2.2.4",
-        "size-limit": "^4.12.0",
-        "ts-node": "^10.0.0",
-        "ts-node-dev": "^1.1.6",
-        "tslib": "^2.3.0",
-        "typescript": "^4.3.3"
+        "rollup-plugin-sizes": "^1.0.4",
+        "size-limit": "^7.0.3",
+        "ts-node": "^10.4.0",
+        "ts-node-dev": "^1.1.8",
+        "tslib": "^2.3.1",
+        "typescript": "^4.5.2"
     },
     "workspaces": [
         "src"
