--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -83,10 +83,10 @@
         "@rollup/plugin-commonjs": "^21.0.1",
         "@rollup/plugin-node-resolve": "^13.0.6",
         "@rollup/plugin-typescript": "^8.3.0",
-        "@storybook/addon-actions": "^6.4.0",
-        "@storybook/addon-essentials": "^6.4.0",
-        "@storybook/addon-links": "^6.4.0",
-        "@storybook/react": "^6.4.0",
+        "@storybook/addon-actions": "^6.4.3",
+        "@storybook/addon-essentials": "^6.4.3",
+        "@storybook/addon-links": "^6.4.3",
+        "@storybook/react": "^6.4.3",
         "@types/jasmine": "^3.10.2",
         "@types/node": "^16.11.10",
         "@types/react": "^17.0.37",
@@ -99,6 +99,7 @@
         "cross-env": "^7.0.3",
         "eslint": "^8.3.0",
         "eslint-config-google": "^0.14.0",
+        "eslint-plugin-storybook": "^0.5.1",
         "husky": "^7.0.4",
         "jasmine": "^3.10.0",
         "react": "^17.0.2",
