--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -79,14 +79,15 @@
         "@babel/preset-env": "^7.16.4",
         "@babel/preset-typescript": "^7.16.0",
         "@material-ui/core": "^4.12.3",
+        "@mdx-js/rollup": "^2.0.0-rc.2",
         "@rollup/plugin-babel": "^5.3.0",
         "@rollup/plugin-commonjs": "^21.0.1",
         "@rollup/plugin-node-resolve": "^13.0.6",
         "@rollup/plugin-typescript": "^8.3.0",
-        "@storybook/addon-actions": "^6.4.3",
-        "@storybook/addon-essentials": "^6.4.3",
-        "@storybook/addon-links": "^6.4.3",
-        "@storybook/react": "^6.4.3",
+        "@storybook/addon-actions": "^6.4.4",
+        "@storybook/addon-essentials": "^6.4.4",
+        "@storybook/addon-links": "^6.4.4",
+        "@storybook/react": "^6.4.4",
         "@types/jasmine": "^3.10.2",
         "@types/node": "^16.11.10",
         "@types/react": "^17.0.37",
@@ -99,7 +100,7 @@
         "cross-env": "^7.0.3",
         "eslint": "^8.3.0",
         "eslint-config-google": "^0.14.0",
-        "eslint-plugin-storybook": "^0.5.1",
+        "eslint-plugin-storybook": "^0.5.2",
         "husky": "^7.0.4",
         "jasmine": "^3.10.0",
         "react": "^17.0.2",
