--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -78,6 +78,9 @@
         "@babel/plugin-transform-typescript": "^7.16.1",
         "@babel/preset-env": "^7.16.4",
         "@babel/preset-typescript": "^7.16.0",
+        "@fortawesome/fontawesome-svg-core": "^1.2.36",
+        "@fortawesome/free-solid-svg-icons": "^5.15.4",
+        "@fortawesome/react-fontawesome": "^0.1.16",
         "@material-ui/core": "^4.12.3",
         "@mdx-js/rollup": "^2.0.0-rc.2",
         "@rollup/plugin-babel": "^5.3.0",
@@ -105,6 +108,7 @@
         "jasmine": "^3.10.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-jss": "^10.8.2",
         "rollup": "^2.60.1",
         "rollup-plugin-buble": "^0.19.8",
         "rollup-plugin-peer-deps-external": "^2.2.4",
