--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -23,6 +23,9 @@
         "esm": "build/bundle/index.esm.js",
         "umd": "build/bundle/index.umd.js"
     },
+    "iife": {
+        "radioPage": "deploy/molitio-radio-page.js"
+    },
     "files": [
         "build"
     ],
@@ -86,6 +89,7 @@
         "@rollup/plugin-babel": "^5.3.0",
         "@rollup/plugin-commonjs": "^21.0.1",
         "@rollup/plugin-node-resolve": "^13.0.6",
+        "@rollup/plugin-replace": "^3.0.0",
         "@rollup/plugin-typescript": "^8.3.0",
         "@storybook/addon-actions": "^6.4.4",
         "@storybook/addon-essentials": "^6.4.4",
