--- a/ui-core/tsconfig.json
+++ b/ui-core/tsconfig.json
@@ -1,13 +1,16 @@
 {
     // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
-    "include": ["src"],
+    "include": ["src", "src/.storybook"],
     "exclude": ["node_modules", "build", "example", "rollup.config.js"],
     "compilerOptions": {
-        "target": "es6",
+        "target": "es5",
         "module": "esnext",
-        "lib": ["dom", "esnext"],
+        "lib": ["dom", "dom.iterable", "esnext"],
+        "types": ["node"],
+        "resolveJsonModule": true,
+        "isolatedModules": true,
         "importHelpers": true,
-        "downlevelIteration": false,
+        "downlevelIteration": true,
         "declaration": true,
         "declarationDir": ".",
         "sourceMap": true,
@@ -18,7 +21,7 @@
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "moduleResolution": "node",
-        "jsx": "react",
+        "jsx": "react-jsx",
         "esModuleInterop": true,
         "skipLibCheck": false,
         "forceConsistentCasingInFileNames": true,
