--- a/ui-core/tsconfig.json
+++ b/ui-core/tsconfig.json
@@ -1,6 +1,6 @@
 {
     // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
-    "include": ["src", "src/.storybook"],
+    "include": ["src", ".storybook"],
     "exclude": ["node_modules", "build", "example", "rollup.config.js"],
     "compilerOptions": {
         "target": "es5",
@@ -14,7 +14,11 @@
         "declaration": true,
         "declarationDir": ".",
         "sourceMap": true,
-        "baseUrl": "./src",
+        "rootDir": "src",
+        "baseUrl": ".",
+        "paths": {
+            "*": ["*"]
+        },
         "strict": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
