--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -68,8 +68,9 @@
         "lint-fix": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
         "size": "size-limit",
         "analyze": "size-limit --why",
-        "storybook": "start-storybook -p 6006",
-        "build-storybook": "mkdir ./storybook-build && build-storybook -o ./storybook-build --docs",
+        "storybook": "cross-env STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true start-storybook -p 4242 --no-manager-cache",
+        "debug": "cross-env NODE_OPTIONS=--inspect-brk STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true start-storybook -p 4242",
+        "build-storybook": "mkdir ./storybook-build && cross-env STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true build-storybook -o ./storybook-build --docs",
         "clean": "rm -rf build"
     },
     "peerDependencies": {
@@ -93,10 +94,12 @@
         "@rollup/plugin-node-resolve": "^13.0.6",
         "@rollup/plugin-replace": "^3.0.0",
         "@rollup/plugin-typescript": "^8.3.0",
-        "@storybook/addon-actions": "^6.4.4",
-        "@storybook/addon-essentials": "^6.4.4",
-        "@storybook/addon-links": "^6.4.4",
-        "@storybook/react": "^6.4.4",
+        "@storybook/addon-actions": "^6.5.0-alpha.5",
+        "@storybook/addon-essentials": "^6.5.0-alpha.5",
+        "@storybook/addon-links": "^6.5.0-alpha.5",
+        "@storybook/builder-webpack5": "^6.5.0-alpha.5",
+        "@storybook/manager-webpack5": "^6.5.0-alpha.5",
+        "@storybook/react": "^6.5.0-alpha.5",
         "@types/anymatch": "^3.0.0",
         "@types/jasmine": "^3.10.2",
         "@types/node": "^16.11.10",
@@ -110,7 +113,7 @@
         "cross-env": "^7.0.3",
         "eslint": "^8.3.0",
         "eslint-config-google": "^0.14.0",
-        "eslint-plugin-storybook": "^0.5.2",
+        "eslint-plugin-storybook": "^0.5.5",
         "husky": "^7.0.4",
         "jasmine": "^3.10.0",
         "react": "^17.0.2",
@@ -126,7 +129,8 @@
         "ts-node-dev": "^1.1.8",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
         "tslib": "^2.3.1",
-        "typescript": "^4.5.2"
+        "typescript": "^4.5.2",
+        "webpack": "^5.65.0"
     },
     "workspaces": [
         "src"
