--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -47,15 +47,15 @@
             "limit": "10 KB"
         },
         {
-            "path": "build/bundle/@molitio/ui-core/index.esm.js",
+            "path": "build/bundle/index.esm.js",
             "limit": "10 KB"
         },
         {
-            "path": "build/bundle/@molitio/ui-core/index.umd.js",
+            "path": "build/bundle/index.umd.js",
             "limit": "10 KB"
         },
         {
-            "path": "build/types/@molitio/ui-core/index.d.ts",
+            "path": "build/types/index.d.ts",
             "limit": "10 KB"
         }
     ],
@@ -69,8 +69,8 @@
         "size": "size-limit",
         "analyze": "size-limit --why",
         "storybook": "cross-env STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true start-storybook -p 4242 --no-manager-cache",
-        "debug": "cross-env NODE_OPTIONS=--inspect-brk STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true start-storybook -p 4242",
         "build-storybook": "mkdir ./storybook-build && cross-env STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true build-storybook -o ./storybook-build --docs",
+        "debug": "cross-env NODE_OPTIONS=--inspect-brk STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true start-storybook -p 4242",
         "clean": "rm -rf build"
     },
     "peerDependencies": {
@@ -86,7 +86,6 @@
         "@fortawesome/fontawesome-svg-core": "^1.2.36",
         "@fortawesome/free-solid-svg-icons": "^5.15.4",
         "@fortawesome/react-fontawesome": "^0.1.16",
-        "@material-ui/core": "^4.12.3",
         "@mdx-js/rollup": "^2.0.0-rc.2",
         "@rollup/plugin-babel": "^5.3.0",
         "@rollup/plugin-commonjs": "^21.0.1",
@@ -94,13 +93,13 @@
         "@rollup/plugin-node-resolve": "^13.0.6",
         "@rollup/plugin-replace": "^3.0.0",
         "@rollup/plugin-typescript": "^8.3.0",
-        "@storybook/addon-actions": "^6.5.0-alpha.5",
-        "@storybook/addon-essentials": "^6.5.0-alpha.5",
-        "@storybook/addon-links": "^6.5.0-alpha.5",
-        "@storybook/builder-webpack5": "^6.5.0-alpha.5",
-        "@storybook/manager-webpack5": "^6.5.0-alpha.5",
-        "@storybook/react": "^6.5.0-alpha.5",
-        "@types/anymatch": "^3.0.0",
+        "@storybook/addon-essentials": "6.5.0-alpha.5",
+        "@storybook/addon-storyshots": "6.5.0-alpha.5",
+        "@storybook/addon-storysource": "6.5.0-alpha.5",
+        "@storybook/cli": "6.5.0-alpha.5",
+        "@storybook/components": "6.5.0-alpha.5",
+        "@storybook/react": "6.5.0-alpha.5",
+        "@storybook/theming": "6.5.0-alpha.5",
         "@types/jasmine": "^3.10.2",
         "@types/node": "^16.11.10",
         "@types/react": "^17.0.37",
@@ -130,9 +129,11 @@
         "tsconfig-paths-webpack-plugin": "^3.5.2",
         "tslib": "^2.3.1",
         "typescript": "^4.5.2",
-        "webpack": "^5.65.0"
+        "webpack": "4"
     },
     "workspaces": [
-        "src"
-    ]
+        "src",
+        ".storybook"
+    ],
+    "dependencies": {}
 }
