--- a/ui-core/tsconfig.json
+++ b/ui-core/tsconfig.json
@@ -1,10 +1,9 @@
 {
-    // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
-    "include": ["src", ".storybook/main.ts"],
+    "include": ["src", ".storybook"],
     "exclude": ["node_modules", "build", "example", "rollup.config.js"],
     "compilerOptions": {
-        "target": "es5",
-        "module": "esnext",
+        "target": "ES6",
+        "module": "es6",
         "lib": ["dom", "dom.iterable", "esnext"],
         "types": ["node"],
         "resolveJsonModule": true,
@@ -12,20 +11,17 @@
         "importHelpers": true,
         "downlevelIteration": true,
         "declaration": true,
-        "declarationDir": ".",
+        "declarationDir": "./types",
         "sourceMap": true,
         "rootDir": ".",
         "baseUrl": "src",
-        "paths": {
-            "*": ["*"]
-        },
         "strict": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "moduleResolution": "node",
-        "jsx": "react-jsx",
+        "jsx": "preserve",
         "esModuleInterop": true,
         "skipLibCheck": false,
         "forceConsistentCasingInFileNames": true,
