--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -93,13 +93,13 @@
         "@rollup/plugin-node-resolve": "^13.0.6",
         "@rollup/plugin-replace": "^3.0.0",
         "@rollup/plugin-typescript": "^8.3.0",
-        "@storybook/addon-essentials": "6.5.0-alpha.5",
-        "@storybook/addon-storyshots": "6.5.0-alpha.5",
-        "@storybook/addon-storysource": "6.5.0-alpha.5",
-        "@storybook/cli": "6.5.0-alpha.5",
-        "@storybook/components": "6.5.0-alpha.5",
-        "@storybook/react": "6.5.0-alpha.5",
-        "@storybook/theming": "6.5.0-alpha.5",
+        "@storybook/addon-actions": "^6.4.9",
+        "@storybook/addon-essentials": "^6.4.9",
+        "@storybook/addon-links": "^6.4.9",
+        "@storybook/builder-webpack5": "^6.4.9",
+        "@storybook/manager-webpack5": "^6.4.9",
+        "@storybook/preset-typescript": "^3.0.0",
+        "@storybook/react": "^6.4.9",
         "@types/jasmine": "^3.10.2",
         "@types/node": "^16.11.10",
         "@types/react": "^17.0.37",
@@ -113,6 +113,7 @@
         "eslint": "^8.3.0",
         "eslint-config-google": "^0.14.0",
         "eslint-plugin-storybook": "^0.5.5",
+        "fork-ts-checker-webpack-plugin": "^6.5.0",
         "husky": "^7.0.4",
         "jasmine": "^3.10.0",
         "react": "^17.0.2",
@@ -124,16 +125,15 @@
         "rollup-plugin-sizes": "^1.0.4",
         "rollup-plugin-svg": "^2.0.0",
         "size-limit": "^7.0.3",
+        "ts-loader": "^9.2.6",
         "ts-node": "^10.4.0",
         "ts-node-dev": "^1.1.8",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
         "tslib": "^2.3.1",
-        "typescript": "^4.5.2",
-        "webpack": "4"
+        "typescript": "^4.5.2"
     },
     "workspaces": [
         "src",
         ".storybook"
-    ],
-    "dependencies": {}
+    ]
 }
