added custom nav style

--- a/ui-core/tsconfig.json
+++ b/ui-core/tsconfig.json
@@ -11,9 +11,9 @@
         "importHelpers": true,
         "downlevelIteration": true,
         "declaration": true,
-        "declarationDir": "./types",
+        "outDir": "build",
+        "declarationDir": "types",
         "sourceMap": true,
-        "rootDir": ".",
         "baseUrl": "src",
         "strict": true,
         "noImplicitReturns": true,
