--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -96,10 +96,12 @@
         "@storybook/addon-actions": "^6.4.9",
         "@storybook/addon-essentials": "^6.4.9",
         "@storybook/addon-links": "^6.4.9",
+        "@storybook/addons": "^6.4.16",
         "@storybook/builder-webpack5": "^6.4.9",
         "@storybook/manager-webpack5": "^6.4.9",
         "@storybook/preset-typescript": "^3.0.0",
         "@storybook/react": "^6.4.9",
+        "@storybook/theming": "^6.4.16",
         "@types/jasmine": "^3.10.2",
         "@types/node": "^16.11.10",
         "@types/react": "^17.0.37",
