--- a/ui-core/tsconfig.json
+++ b/ui-core/tsconfig.json
@@ -1,20 +1,31 @@
 {
-    "include": ["src/**/*", ".storybook/**/*", "sb-example"],
-    "exclude": ["node_modules", "build", "example", "rollup.config.js"],
+    "include": ["src/**/*"],
+    "exclude": [
+        "node_modules",
+        "build",
+        "dist",
+        "example",
+        "rollup.config.js",
+        "**/*.spec.tsx",
+        "**/*.spec.ts",
+        "**/*.stories.tsx"
+    ],
     "compilerOptions": {
-        "target": "ES6",
-        "module": "es6",
-        "lib": ["dom", "dom.iterable", "esnext"],
-        "types": ["node"],
+        "target": "es5",
+        "module": "esnext",
+        "lib": ["dom", "dom.iterable", "esnext", "es6", "es2016", "es2017"],
+        "types": ["react", "jest", "node"],
         "resolveJsonModule": true,
         "isolatedModules": true,
         "importHelpers": true,
         "downlevelIteration": true,
         "declaration": true,
         "outDir": "build",
-        "declarationDir": "types",
+        "rootDir": "src",
+        "declarationDir": "build",
+        "declarationMap": true,
         "sourceMap": true,
-        "baseUrl": "src",
+        "composite": true,
         "strict": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
