--- a/ui-core/tsconfig.json
+++ b/ui-core/tsconfig.json
@@ -14,12 +14,13 @@
         "target": "es5",
         "module": "esnext",
         "lib": ["dom", "dom.iterable", "esnext", "es6", "es2016", "es2017"],
-        "types": ["react", "jest", "node"],
-        "resolveJsonModule": true,
+        "types": ["react", "node"],
+        "resolveJsonModule": false,
         "isolatedModules": true,
         "importHelpers": true,
         "downlevelIteration": true,
         "declaration": true,
+        "baseUrl": "src/",
         "outDir": "build",
         "rootDir": "src",
         "declarationDir": "build",
@@ -28,6 +29,7 @@
         "composite": true,
         "strict": true,
         "noImplicitReturns": true,
+        "allowSyntheticDefaultImports": true,
         "noFallthroughCasesInSwitch": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
