--- a/ui-core/tsconfig.json
+++ b/ui-core/tsconfig.json
@@ -20,12 +20,12 @@
         "importHelpers": true,
         "downlevelIteration": true,
         "declaration": true,
-        "baseUrl": "src/",
-        "outDir": "build",
+        "baseUrl": "src",
+        "outDir": "dist",
         "rootDir": "src",
-        "declarationDir": "build",
+        "declarationDir": "dist",
         "declarationMap": true,
-        "sourceMap": true,
+        "sourceMap": false,
         "composite": true,
         "strict": true,
         "noImplicitReturns": true,
