--- a/ui-core/tsconfig.json
+++ b/ui-core/tsconfig.json
@@ -1,15 +1,6 @@
 {
     "include": ["src/**/*"],
-    "exclude": [
-        "node_modules",
-        "build",
-        "dist",
-        "example",
-        "rollup.config.js",
-        "**/*.spec.tsx",
-        "**/*.spec.ts",
-        "**/*.stories.tsx"
-    ],
+    "exclude": ["node_modules", "build", "dist", "example", "rollup.config.js", "**/*.spec.tsx", "**/*.spec.ts"],
     "compilerOptions": {
         "target": "es5",
         "module": "esnext",
