--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@molitio/ui-core",
-    "version": "0.6.1-alpha.0",
+    "version": "0.6.2-alpha.0",
     "author": "molitio foundation",
     "description": "Universal reusable React UI Components",
     "license": "CC0-1.0",
@@ -118,6 +118,7 @@
         "fork-ts-checker-webpack-plugin": "^6.5.0",
         "husky": "^7.0.4",
         "jasmine": "^3.10.0",
+        "node-sass": "^7.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-jss": "^10.8.2",
