play control replaced in sense radio

--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -140,5 +140,8 @@
     "workspaces": [
         "src",
         ".storybook"
-    ]
+    ],
+    "dependencies": {
+        "@storybook/addon-a11y": "^6.4.19"
+    }
 }
