feature(*): added publish script to npm

--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -60,6 +60,8 @@
         }
     ],
     "scripts": {
+        "prepublish": "npm run build",
+        "publish": "npm publish ./dist",
         "prebuild": "npm run clean && prettier --write src/",
         "build": "rollup --config",
         "postbuild": "node packageBuilder",
