feat(*): scss modules working with jss in storybook

--- a/ui-core/tsconfig.json
+++ b/ui-core/tsconfig.json
@@ -29,6 +29,7 @@
         "esModuleInterop": true,
         "skipLibCheck": false,
         "forceConsistentCasingInFileNames": true,
-        "noEmit": true
+        "noEmit": true,
+        "plugins": [{ "name": "typescript-plugin-css-modules" }]
     }
 }
