--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -102,6 +102,7 @@
         "@storybook/addons": "^6.4.16",
         "@storybook/builder-webpack5": "^6.4.9",
         "@storybook/manager-webpack5": "^6.4.9",
+        "@storybook/preset-scss": "^1.0.3",
         "@storybook/preset-typescript": "^3.0.0",
         "@storybook/react": "^6.4.9",
         "@storybook/theming": "^6.4.16",
@@ -115,14 +116,17 @@
         "babel-loader": "^8.2.3",
         "babel-preset-latest": "^6.24.1",
         "cross-env": "^7.0.3",
+        "css-loader": "^6.7.1",
         "device-detector-js": "^3.0.2",
         "eslint": "^8.3.0",
         "eslint-config-google": "^0.14.0",
         "eslint-plugin-storybook": "^0.5.5",
         "fork-ts-checker-webpack-plugin": "^6.5.0",
         "husky": "^7.0.4",
+        "i": "^0.3.7",
         "jasmine": "^3.10.0",
         "node-sass": "^7.0.1",
+        "npm": "^8.7.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-jss": "^10.8.2",
@@ -133,13 +137,17 @@
         "rollup-plugin-sizes": "^1.0.4",
         "rollup-plugin-svg": "^2.0.0",
         "rollup-plugin-typescript2": "^0.31.1",
+        "sass-loader": "^12.6.0",
         "size-limit": "^7.0.3",
+        "storybook-addon-sass-postcss": "^0.1.1",
+        "style-loader": "^3.3.1",
         "ts-loader": "^9.2.6",
         "ts-node": "^10.4.0",
         "ts-node-dev": "^1.1.8",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
         "tslib": "^2.3.1",
-        "typescript": "^4.5.2"
+        "typescript": "^4.5.2",
+        "typescript-plugin-css-modules": "^3.4.0"
     },
     "workspaces": [
         "src",
