fix(*): set css loader to module

--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -126,6 +126,8 @@
         "jasmine": "^3.10.0",
         "node-sass": "^7.0.1",
         "npm": "^8.7.0",
+        "postcss": "^8.4.13",
+        "postcss-scss": "^4.0.4",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-jss": "^10.8.2",
@@ -135,6 +137,7 @@
         "rollup-plugin-sizes": "^1.0.4",
         "rollup-plugin-svg": "^2.0.0",
         "rollup-plugin-typescript2": "^0.31.1",
+        "sass": "^1.51.0",
         "sass-loader": "^12.6.0",
         "size-limit": "^7.0.3",
         "storybook-addon-sass-postcss": "^0.1.1",
