bugfix: attempting proper ts config due to build error

--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -76,8 +76,8 @@
         "clean": "rm -rf build"
     },
     "peerDependencies": {
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.16.0",
@@ -90,29 +90,30 @@
         "@fortawesome/react-fontawesome": "^0.1.16",
         "@mdx-js/rollup": "^2.0.0-rc.2",
         "@rollup/plugin-babel": "^5.3.0",
+        "@rollup/plugin-buble": "^0.21.3",
         "@rollup/plugin-commonjs": "^21.0.1",
         "@rollup/plugin-image": "^2.1.1",
         "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^13.0.6",
         "@rollup/plugin-replace": "^3.0.0",
         "@rollup/plugin-typescript": "^8.3.0",
-        "@storybook/addon-a11y": "^6.4.19",
-        "@storybook/addon-actions": "^6.5.3",
-        "@storybook/addon-essentials": "^6.5.3",
-        "@storybook/addon-interactions": "^6.5.3",
-        "@storybook/addon-links": "^6.5.3",
-        "@storybook/addons": "^6.4.16",
-        "@storybook/builder-webpack5": "^6.5.3",
-        "@storybook/manager-webpack5": "^6.5.3",
+        "@storybook/addon-a11y": "^6.5.4",
+        "@storybook/addon-actions": "^6.5.4",
+        "@storybook/addon-essentials": "^6.5.4",
+        "@storybook/addon-interactions": "^6.5.4",
+        "@storybook/addon-links": "^6.5.4",
+        "@storybook/addons": "^6.5.4",
+        "@storybook/builder-webpack5": "^6.5.4",
+        "@storybook/manager-webpack5": "^6.5.4",
         "@storybook/preset-scss": "^1.0.3",
         "@storybook/preset-typescript": "^3.0.0",
-        "@storybook/react": "^6.5.3",
+        "@storybook/react": "^6.5.4",
         "@storybook/testing-library": "^0.0.11",
-        "@storybook/theming": "^6.4.16",
+        "@storybook/theming": "^6.5.4",
         "@types/jasmine": "^3.10.2",
         "@types/node": "^16.11.10",
-        "@types/react": "^17.0.37",
-        "@types/react-dom": "^17.0.11",
+        "@types/react": "^18.0.9",
+        "@types/react-dom": "^18.0.5",
         "@typescript-eslint/eslint-plugin": "^5.4.0",
         "@typescript-eslint/parser": "^5.4.0",
         "babel-cli": "^6.26.0",
@@ -131,11 +132,10 @@
         "postcss": "^8.4.14",
         "postcss-scss": "^4.0.4",
         "prettier": "2.6.2",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-jss": "^10.8.2",
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0",
+        "react-jss": "^10.9.0",
         "rollup": "^2.60.1",
-        "rollup-plugin-buble": "^0.19.8",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-postcss": "^4.0.2",
         "rollup-plugin-scss": "^3.0.0",
@@ -145,6 +145,7 @@
         "sass": "^1.52.1",
         "sass-loader": "^12.6.0",
         "size-limit": "^7.0.3",
+        "style-loader": "^3.3.1",
         "ts-loader": "^9.2.6",
         "ts-node": "^10.4.0",
         "ts-node-dev": "^1.1.8",
