--- a/.github/workflows/ui-core-npm-publish.yml
+++ b/.github/workflows/ui-core-npm-publish.yml
@@ -7,9 +7,9 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
-          node-version: 12
-      - working-directory: /ui
+          node-version: 16
       - run: build
+        working-directory: ../../ui-core
       - run: npm test
       - uses: JS-DevTools/npm-publish@v1
         with:
