--- a/ui-core/tsconfig.json
+++ b/ui-core/tsconfig.json
@@ -3,8 +3,8 @@
     "exclude": ["node_modules", "build", "dist", "example", "rollup.config.js", "**/*.spec.tsx", "**/*.spec.ts"],
     "compilerOptions": {
         "target": "es5",
-        "module": "es2020",
-        "lib": ["dom", "dom.iterable", "esnext", "es6", "es2016", "es2017", "es2020"],
+        "module": "esnext",
+        "lib": ["dom", "dom.iterable", "esnext", "es6", "es2016", "es2017"],
         "types": ["react", "node"],
         "resolveJsonModule": false,
         "isolatedModules": true,
