fix: added node version display

--- a/.github/workflows/ui-core-npm-publish.yml
+++ b/.github/workflows/ui-core-npm-publish.yml
@@ -8,6 +8,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
+      - run: node --version
       - run: npm i && npm run build && npm test
         working-directory: ui-core
       - uses: JS-DevTools/npm-publish@v1
