69 storybook preparation for static and dynamic css rule management (#70)
* fix(*): failing storybook build

* bugfix: attempting proper ts config due to build error

* fix: package publish folder fix

* fix: working directory fix for pipeline

* fix: working directory fix for pipeline

* fix: working directory fix for pipeline

* fix: rollup error still persists

* fix: rollup and storybook build with updated components

* fix: attempting to resolve action build error

* fix: publiush error fix

* fix: added node version display

* fix: action build fix attempt

* fix: build fix

* fix: scss module decalaration change

* fix: button getting lower cased in github action

* fix: moved npm publish to only on release branch to be executed

* chore: configuring jest for testing

* chore: git ignore update

* chore: configuration of jest, unexpected token '<'

* chore: configuring jest, set babel-jest and removed ts-jest, sticking to babel as possible

* chore: jest test configuration ts parsing error

* chore: configuring jest, pre transition to storybook

* chore: storybook jest pre config

* chore: refactor components syntax

--- a/.github/workflows/ui-core-npm-publish.yml
+++ b/.github/workflows/ui-core-npm-publish.yml
@@ -1,16 +1,23 @@
-on: push
+on:
+  push:
+    branches:
+      - "releases/**"
 
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 12
-      - working-directory: /ui
-      - run: build
+          node-version: 16
+      - run: node --version
+      - run: npm i
+        working-directory: ui-core
+      - run: npm run publish
+        working-directory: ui-core
       - run: npm test
+        working-directory: ui-core
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
