--- a/ui-core/tsconfig.json
+++ b/ui-core/tsconfig.json
@@ -1,11 +1,12 @@
 {
-    "include": ["src/**/*"],
-    "exclude": ["node_modules", "build", "dist", "example", "rollup.config.js", "**/*.spec.tsx", "**/*.spec.ts"],
+    "include": ["src/**/*", "src/DynamicButton.test.tsx", "__tests__"],
+    "exclude": ["node_modules", "build", "dist", "example", "rollup.config.js", "**/*.spec.tsx"],
     "compilerOptions": {
         "target": "es5",
-        "module": "esnext",
-        "lib": ["dom", "dom.iterable", "esnext", "es6", "es2016", "es2017"],
-        "types": ["react", "node"],
+        "module": "es2020",
+        "lib": ["dom", "dom.iterable", "esnext", "es6", "es2016", "es2017", "es2020"],
+        "types": ["react", "node", "jest"],
+        "typeRoots": ["./src", "./__tests__"],
         "resolveJsonModule": false,
         "isolatedModules": true,
         "importHelpers": true,
@@ -16,7 +17,6 @@
         "rootDir": "src",
         "declarationDir": "dist",
         "declarationMap": true,
-        "sourceMap": false,
         "composite": true,
         "strict": true,
         "noImplicitReturns": true,
