chore: added build json update

--- a/ui-core/.vscode/launch.json
+++ b/ui-core/.vscode/launch.json
@@ -11,6 +11,14 @@
       "cwd": "${workspaceFolder}",
       "runtimeExecutable": "npm",
       "runtimeArgs": ["run", "build"]
+    },
+    {
+      "name": "Launch storybook npm",
+      "type": "node",
+      "request": "launch",
+      "cwd": "${workspaceFolder}",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run", "storybook"]
     }
   ]
 }
