chore: scaffolding implememntation

--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -72,15 +72,16 @@
         "size": "size-limit",
         "analyze": "size-limit --why",
         "storybook": "cross-env STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true start-storybook -p 4242 --no-manager-cache",
-        "build-storybook": "rm -rf ./storybook-build && mkdir ./storybook-build && cross-env STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true build-storybook -o ./storybook-build --docs",
+        "build-storybook": "cd .artifact && rm -rf storybook && mkdir storybook && cd .. && cross-env STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true build-storybook -o .artifact/storybook --docs",
         "debug": "cross-env NODE_OPTIONS=--inspect-brk STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true start-storybook -p 4242",
-        "create-artifacts": "mkdir .artifact && cd dist/ && npm pack --pack-destination ../.artifact && cd .. && npm run docgen",
+        "create-artifacts": "mkdir -p .artifact/package && cd dist/ && npm pack --pack-destination ../.artifact/package && cd .. && npm run docgen",
         "clean": "rm -rf dist && rm -rf .artifact",
         "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
         "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest --watch",
         "test:generate-output": "jest --json --outputFile=.jest-test-results.json",
-        "docgen": "mkdir .artifact/jsdoc && ./node_modules/.bin/jsdoc src/index.ts -d .artifact/jsdoc",
+        "docgen": "mkdir -p .artifact/jsdoc && ./node_modules/.bin/jsdoc src/index.ts -d .artifact/jsdoc",
         "tsgen": "npm run tsc src/index.ts --project tsconfig.json",
+        "testgen": "npm run tsc __tests__ -d .artifact/__tests__ --project tsconfig.json",
         "tsc": "tsc"
     },
     "peerDependencies": {
@@ -126,6 +127,7 @@
         "@types/node": "^16.11.10",
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.5",
+        "@types/rollup-plugin-peer-deps-external": "^2.2.1",
         "@typescript-eslint/eslint-plugin": "^5.4.0",
         "@typescript-eslint/parser": "^5.4.0",
         "babel-cli": "^6.26.0",
