--- a/ui-core/tsconfig.json
+++ b/ui-core/tsconfig.json
@@ -1,12 +1,12 @@
 {
-    "include": ["src/**/*", "__tests__/**/*"],
+    "include": ["src/**/*"],
     "exclude": ["node_modules", "build", "dist", ".artifact", "*.config.js"],
     "compilerOptions": {
         "target": "es5",
         "module": "es2020",
         "lib": ["dom", "dom.iterable", "esnext", "es6", "es2016", "es2017", "es2020"],
-        "types": ["react", "node", "jest"],
-        "typeRoots": ["./src", "./__tests__"],
+        "types": ["react", "node"],
+        "typeRoots": ["./src"],
         "resolveJsonModule": false,
         "isolatedModules": true,
         "importHelpers": true,
